--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "``` v22.14.0 ```",
   "main": "dist/app.js",
   "scripts": {
+    "start": "tsc && node dist/app.js",
+    "lint": "eslint . --ext .ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
