--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "``` v22.14.0 ```",
   "main": "dist/app.js",
   "scripts": {
-    "start": "tsc && node dist/app.js",
+    "clean": "rm -rf dist",
+    "build": "rm -rf dist && npx tsc",
+    "start": "node dist/app.js",
     "lint": "eslint . --ext .ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,12 +24,17 @@
   "devDependencies": {
     "@eslint/js": "^9.23.0",
     "@types/express": "^4.17.1",
+    "@types/express-session": "^1.18.1",
     "eslint": "^9.23.0",
     "globals": "^16.0.0",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^16.4.7",
+    "express": "^4.17.1",
+    "express-session": "^1.18.1"
   }
 }
