--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,13 @@
       "target": "es6",
       "moduleResolution": "node",
       "sourceMap": true,
-      "outDir": "dist"
+      "outDir": "dist",
+      "baseUrl": "./src",
+      "rootDir": "./src",
+      "noImplicitAny": true,
+      "strict": true,
     },
-    "lib": ["es2015"]
+    "lib": ["es2015"],
+    "include": ["src/**/*"],     
+    "exclude": ["test"], // TODO: Implement tests!
   }
