--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "rm -rf dist && npx tsc",
     "start": "node dist/app.js",
     "lint": "eslint . --ext .ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register 'test/**/*.test.ts'"
   },
   "repository": {
     "type": "git",
@@ -23,10 +23,14 @@
   "homepage": "https://github.com/yonatan-ratner/confluence-integration#readme",
   "devDependencies": {
     "@eslint/js": "^9.23.0",
+    "@types/chai": "^5.2.1",
     "@types/express": "^4.17.1",
     "@types/express-session": "^1.18.1",
+    "@types/mocha": "^10.0.10",
+    "chai": "^5.2.0",
     "eslint": "^9.23.0",
     "globals": "^16.0.0",
+    "mocha": "^11.1.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.2",
