--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "confluence-integration",
   "version": "1.0.0",
   "description": "``` v22.14.0 ```",
-  "main": "dist/app.js",
+  "main": "dist/index.js",
   "scripts": {
     "clean": "rm -rf dist",
     "build": "rm -rf dist && npx tsc",
-    "start": "node dist/app.js",
+    "start": "node dist/index.js",
     "lint": "eslint . --ext .ts",
-    "test": "mocha -r ts-node/register 'test/**/*.test.ts'"
+    "test": "cross-env mocha -r ts-node/register -r ./test/index.ts \"test/**/*.test.ts\""
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
     "@types/express-session": "^1.18.1",
     "@types/mocha": "^10.0.10",
     "chai": "^5.2.0",
+    "cross-env": "^7.0.3",
     "eslint": "^9.23.0",
     "globals": "^16.0.0",
     "mocha": "^11.1.0",
