--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,5 @@
     },
     "lib": ["es2015"],
     "include": ["src/**/*"],     
-    "exclude": ["test"], // TODO: Implement tests!
+    "exclude": ["test"],
   }
